# ig-workshop-tests

./: Cargo.toml
ig-library/ArkCore/EV_SkylandersTrapTeam/: metaobjects.xml  tfbbindings.xml
ig-library/src/: tests.rs
ig-library/src/client/: precache.rs
ig-library/src/core/: ig_file_context.rs  ig_handle.rs  ig_memory.rs  ig_objects.rs  ig_std_lib_storage_device.rs
ig-library/src/core/load/: ig_igz_loader.rs  ig_loader.rs
ig-library/src/core/meta/field/impl/: ig_object_ref_meta_field.rs
ig-library/src/util/: ig_common.rs
src/: main.rs
src/tabs/: configuration.rs  laboratory_editor.rs
