workspace = { members = ["ig-library", "ig-proc-macros"] }
[package]
name = "ig-workshop"
version = "0.1.0"
edition = "2024"

[dependencies]
ig-library = { path = "ig-library" }
log = "0.4"
env_logger = { version = "0.11.8", features = ["color", "humantime"] }
egui = { version = "0.31.1", features = [] }
egui_extras = { version = "0.31.1", features = ["all_loaders"] }
eframe = { version = "0.31.1", features = ["glow"] }
image = "0.25.6"
egui_dock = "0.16.0"
dirs = "6.0.0"
serde = "1.0.219"
sonic-rs = "0.5.1"
lazy_static = "1.5.0"
phf = { version = "0.11.3", features = ["macros"] }
byteorder = "1.5.0"
walkdir = "2.5.0"
rfd = "0.15.3"
egui_ltreeview = "0.2.0"

[profile.release]
# increase speed/lower binary size
codegen-units = 1
lto = "fat"
opt-level = 3
overflow-checks = false
panic = "abort"
